# SAMA

./: CMakeLists.txt  README.detox.md  README.md
src/: CMakeLists.txt  alignment.cpp  alignment.h  arc.h  bitvec.h  correctgraph.cpp  correctgraph.h  coverage.cpp  coverage.h  crfmult.cpp  crfmult.h  dbgraph.cpp  dbgraph.h  debug.cpp  dsnode.cpp  dsnode.h  global.h  graphaln.cpp  graphaln.h  kmernpp.cpp  kmernpp.h  main.cpp  readaln.cpp  readaln.h  refcomp.cpp  refcomp.h  settings.cpp  settings.h  ssnode.h  threshold.cpp  threshold.h  util.cpp  util.h
src/kmer/: CMakeLists.txt  nucleotide.h  tkmer.h  tstring.cpp  tstring.h
src/libdai/: CMakeLists.txt  alldai.cpp  bp.cpp  factorgraph.cpp  jtree.cpp  parallelbp.cpp
src/libdai/dai/: alldai.h  bp.h  dai_config.h  factorgraph.h  parallelbp.h  weightedgraph.h
src/pgm/: CMakeLists.txt  factor.cpp  factor.h  factor.h~  pgminference.cpp  pgminference.h
src/readfile/: CMakeLists.txt  fasta.cpp  fasta.h  fastq.cpp  fastq.h  seqfile.cpp  seqfile.h
test/: reads.mf
visualisation/: README.md  cytgraph6nb1.arcs  cytgraph6nb1.nodes  detox_styles.xml  factorGraph.6.nb1.fg  factorgraph.6.nb1.cyt.arcs  factorgraph.6.nb1.cyt.nodes
